--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <!-- В этот список добавляй элементы галереи -->
-    <ul class="gallery js-gallery"></ul>
+    <ul class="gallery js-gallery">
+      
+    </ul>
 
     <!--
       Модальное окно для полноразмерного изображения
